--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="link">#0a80d1</color>
     <color name="timestamp">#a0a3a7</color>
     <color name="textPrimary">#212121</color>
+    <color name="backg">#555</color>
     <color name="textSecondary">#727272</color>
     <color name="divider">#B6B6B6</color>
     <color name="solid_one">#4abc96</color>
